added chatbot flow with memory

--- a/chatbot/chatbot_without_memory.ipynb
+++ b/chatbot/chatbot_without_memory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "cf983663",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "039de552",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "c56b0212",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "586828ce",
    "metadata": {},
    "outputs": [],
@@ -69,23 +69,25 @@
     "    state['response'] = response\n",
     "    state['chat_history'].append(HumanMessage(content=user_input, role=\"user\"))\n",
     "    state['chat_history'].append(AIMessage(content=response, role=\"assistant\"))\n",
+    "    return state\n",
     "    \n",
-    "    return {'response': response}"
+    "    # I can return just the response if needed\n",
+    "    # return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "12912b72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1b80b1b44a0>"
+       "<langgraph.graph.state.StateGraph at 0x1b80b6a5370>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "62b129f6",
    "metadata": {},
    "outputs": [],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "07e68fca",
    "metadata": {},
    "outputs": [
@@ -122,7 +124,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "eccd3bf1",
    "metadata": {},
    "outputs": [
@@ -143,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is the beginning of our conversation, and I'm happy to chat with you. I don't have any prior conversation or question from you to recall. What's on your mind today, and how can I help?\n"
+      "This is the beginning of our conversation, and I don't have any prior question to recall. I'm happy to chat with you now, though! What's on your mind?\n"
      ]
     }
    ],
