--- a/chatbot/chatbot_with_memory.ipynb
+++ b/chatbot/chatbot_with_memory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "cf983663",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "039de552",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "c56b0212",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "586828ce",
    "metadata": {},
    "outputs": [],
@@ -84,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "12912b72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x2144dcf5430>"
+       "<langgraph.graph.state.StateGraph at 0x2073b7c3710>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "62b129f6",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "07e68fca",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "eccd3bf1",
    "metadata": {},
    "outputs": [
@@ -153,9 +153,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: hi\n",
       "Assistant: It's nice to meet you. Is there something I can help you with or would you like to chat?\n",
-      "Assistant: It's nice to meet you too, Manoj. Is there something on your mind that you'd like to talk about, or is this just a casual conversation?\n",
-      "Assistant: Your name is Manoj. We had just introduced ourselves earlier in our conversation.\n",
+      "User: I am Manoj\n",
+      "Assistant: It's nice to meet you too, Manoj. How's your day going so far? Is there something on your mind that you'd like to talk about, or is this just a casual conversation?\n",
+      "User: What is my name\n",
+      "Assistant: Your name is Manoj. We were just chatting and getting to know each other. Is there something specific you'd like to talk about now?\n",
       "Exiting the chatbot.\n"
      ]
     }
@@ -176,6 +179,7 @@
     "    config = {'configurable':{'thread_id': thread_id}}\n",
     "    result = workflow.invoke(initial_state, config=config)\n",
     "    response = result['response']\n",
+    "    print(f\"User: {user_input}\")\n",
     "    print(f\"Assistant: {response}\")"
    ]
   },
